fix: Fix some layout issues on Article Viewer screen; refactor: Revert table width hacks in Markdown Renderer component now that layout has been corrected

--- a/src/app/screens/article-viewer/article-viewer-screen.component.scss
+++ b/src/app/screens/article-viewer/article-viewer-screen.component.scss
@@ -6,13 +6,8 @@
 }
 
 .container {
-  display: flex;
-  flex-flow: column nowrap;
-  align-items: center;
-  justify-content: center;
-  gap: $lcc-space--sm;
   width: 100%;
-  max-width: 1000px;
+  max-width: $lcc-width--app-content;
 }
 
 lcc-link-list {
